# unicode-intervals

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codecov.yml  generate_tables.py
.github/workflows/: ci.yml  codspeed.yml  python-release.yml  release.yml
benches/: bench.rs
crates/unicode-intervals/: Cargo.toml
crates/unicode-intervals-py/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/unicode-intervals-py/benches-py/: test_vs_hypothesis.py
crates/unicode-intervals-py/python/unicode_intervals/: __init__.py  __init__.pyi
crates/unicode-intervals-py/src/: lib.rs
crates/unicode-intervals-py/tests-py/: test_api.py  test_charmap_compat.py  test_docstrings.py  test_readme.py
crates/unicode-intervals/benches/: bench.rs
crates/unicode-intervals/src/: categories.rs  constants.rs  intervals.rs  intervalset.rs  lib.rs  query.rs
crates/unicode-intervals/src/tables/: v10_0_0.rs  v11_0_0.rs  v12_1_0.rs  v9_0_0.rs
src/: categories.rs  constants.rs  error.rs  intervals.rs  intervalset.rs  lib.rs  query.rs
src/tables/: mod.rs  v12_0_0.rs  v13_0_0.rs  v14_0_0.rs  v15_0_0.rs  v15_1_0.rs  v16_0_0.rs  v17_0_0.rs
