[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
repository = "https://github.com/Stranger6667/unicode-intervals"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
