[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unicode_intervals"
dynamic = ["version"]
description = "Search Unicode code point intervals by category, range, and characters"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Dmitry Dygalo", email = "dmitry@dygalo.dev" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
tests = ["pytest>=8.3", "hypothesis>=6.130"]
bench = ["pytest>=8.3", "pytest-benchmark>=5.0", "hypothesis>=6.130"]

[tool.maturin]
python-source = "python"
strip = true
